--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,10 +1,12 @@
 FROM node:alpine
 
-WORKDIR /usr/src/backend/app
+WORKDIR /app/frontend
 
 COPY package.json ./
 
 COPY ./ ./
 
+RUN npm install -g npm@9.1.2
 RUN npm i
+RUN npm audit fix
 CMD ["npm", "run", "start"]
