--- a/.env
+++ b/.env
@@ -2,4 +2,11 @@ MYSQL_DATABASE=develop
 MYSQL_USER=develop
 MYSQL_ROOT_PASSWORD=develop
 MYSQL_PASSWORD=develop
+MYSQL_ROOT_HOST=%
+
 MYSQL_PORT=3333
+PHPMYADMIN_PORT=666
+BACKEND_PORT=81
+FRONTEND_PORT=82
+
+PIP_ROOT_USER_ACTION=ignore
