--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,6 @@
 asgiref==3.5.2
 async-timeout==4.0.2
-backports.zoneinfo==0.2.1;python_version<"3.9"
+python-dotenv==0.21.0
 Deprecated==1.2.13
 Django==4.1.3
 django-appconf==1.0.5
@@ -9,6 +9,7 @@ django-imagekit==4.1.0
 django-jazzmin==2.6.0
 django-redis==5.2.0
 djangorestframework==3.14.0
+mysqlclient==2.1.1
 packaging==21.3
 pilkit==2.0
 Pillow==9.3.0
