Ongoing: docker setup 1

--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ MYSQL_DATABASE=develop
 MYSQL_USER=develop
 MYSQL_ROOT_PASSWORD=develop
 MYSQL_PASSWORD=develop
-MYSQL_ROOT_HOST=%
+MYSQL_ROOT_HOST=deals_db
 
 MYSQL_PORT=3333
 PHPMYADMIN_PORT=666
@@ -10,3 +10,7 @@ BACKEND_PORT=81
 FRONTEND_PORT=82
 
 PIP_ROOT_USER_ACTION=ignore
+
+DJANGO_SUPERUSER_PASSWORD=developer
+DJANGO_SUPERUSER_EMAIL=arushaman99@gmail.com
+DJANGO_SUPERUSER_USERNAME=admin
