--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,19 +2,27 @@ version: '3.6'
 
 services:
   deals_db:
+    networks:
+      deals_net:
     env_file: .env
     image: mysql:8.0.31-debian
     container_name: deals_db
     restart: always
     environment:
-      MYSQL_ROOT_PASSWORD: "${MYSQL_ROOT_PASSWORD}"
-      MYSQL_PORT: "${MYSQL_PORT}"
+      - MYSQL_ROOT_PASSWORD="${MYSQL_ROOT_PASSWORD}"
+      - MYSQL_PORT="${MYSQL_PORT}"
+      - MYSQL_ROOT_HOST="${MYSQL_ROOT_HOST}"
+      - MYSQL_DATABASE="${MYSQL_DATABASE}"
+      - MYSQL_USER="${MYSQL_USER}"
+      - MYSQL_PASSWORD="${MYSQL_PASSWORD}"
     ports:
       - "${MYSQL_PORT}:3306"
     volumes:
-      - ./.docker/database:/var/lib/mysql
-      - ./.docker/init:/docker-entrypoint-initdb.d
+      - .docker/database:/var/lib/mysql
+      - .docker/init:/docker-entrypoint-initdb.d
   deals_backend:
+    networks:
+      deals_net:
     env_file: .env
     build:
       context: ./backend
@@ -24,10 +32,18 @@ services:
     working_dir: /app/backend
     volumes:
       - ./backend:/app/backend:rw
+      - ./.env:/app/backend/.env:ro
     ports:
       - "${BACKEND_PORT}:8000"
     depends_on:
       - deals_db
+    extra_hosts:
+      - "host.docker.internal:host-gateway"
+    command : bash -c "python manage.py makemigrations &&
+                      python manage.py migrate &&
+                      python python manage.py createcachetable &&
+                      python python manage.py init_admin &&
+                      python manage.py runserver 0.0.0.0:8000"
   deals_frontend:
     env_file: .env
     build:
@@ -35,6 +51,7 @@ services:
       dockerfile: ../.docker/frontendDockerfile
     container_name: deals_frontend
     restart: always
+    stdin_open: true
     volumes:
       - ./frontend:/app/frontend:rw
     ports:
@@ -48,6 +65,11 @@ services:
       - "${PHPMYADMIN_PORT}:80"
     environment:
       - PMA_ARBITARY=1
-      - PMA_CONTROLPORT="${MYSQL_PORT}"
+      - PMA_PORT="${MYSQL_PORT}"
+      - PMA_HOST="${MYSQL_ROOT_HOST}"
     volumes:
-      - ./.docker/sessions
+      - .docker/sessions:/sessions
+
+networks:
+  deals_net:
+    driver: bridge
