Docker: setup complete

--- a/.env
+++ b/.env
@@ -1,16 +1,25 @@
-MYSQL_DATABASE=develop
-MYSQL_USER=develop
-MYSQL_ROOT_PASSWORD=develop
-MYSQL_PASSWORD=develop
-MYSQL_ROOT_HOST=deals_db
+DEBUG=1
+DATA_DIR=./data
 
-MYSQL_PORT=3333
-PHPMYADMIN_PORT=666
-BACKEND_PORT=81
-FRONTEND_PORT=82
-
-PIP_ROOT_USER_ACTION=ignore
-
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 0.0.0.0
 DJANGO_SUPERUSER_PASSWORD=developer
 DJANGO_SUPERUSER_EMAIL=arushaman99@gmail.com
 DJANGO_SUPERUSER_USERNAME=admin
+ADMIN_SITE_NAME="Nearby Deals"
+ADMIN_SITE_WELCOME="Welcome to Portal Services"
+
+SQL_ENGINE=django.db.backends.mysql
+SQL_DATABASE=develop
+SQL_USER=develop
+SQL_PASSWORD=develop
+SQL_HOST_POSTGRES=postgresql_db
+SQL_HOST_MYSQL=mysql_db
+SQL_PORT_POSTGRES=5432
+SQL_PORT_MYSQL=3306
+SQL_ROOT_PASSWORD=develop
+REDIS_HOST=redis_server
+REDIS_PORT=6379
+
+# choose which database system to be used postgres|mysql
+DATABASE=postgres
+
