Update: remove GPL license

--- a/.env
+++ b/.env
@@ -21,5 +21,5 @@ REDIS_HOST=redis_server
 REDIS_PORT=6379
 
 # choose which database system to be used postgres|mysql
-DATABASE=postgres
+DATABASE=mysql
 
